Bug 1635594 - Port |Bug 1296253 - Horizontal space for notes in the address book makes phone numbers unreadable| to SeaMonkey. r=frg

--- a/suite/themes/classic/mac/messenger/addressbook/addressbook.css
+++ b/suite/themes/classic/mac/messenger/addressbook/addressbook.css
@@ -326,6 +326,10 @@ toolbar[iconsize="small"] > #button-abdelete[disabled] {
   margin: 0px;
 }
  
+.cardViewColumn {
+  margin-inline-end: 10px;
+}
+
 .cardViewGroup {
   margin-top: 8px;
   padding-bottom: 5px;
