--- a/suite/themes/modern/messenger/addressbook/addressbook.css
+++ b/suite/themes/modern/messenger/addressbook/addressbook.css
@@ -145,6 +145,10 @@
   color: #000000;
 }
  
+.cardViewColumn {
+  margin-inline-end: 10px;
+}
+
 .cardViewGroup {
   margin-top: 8px;
   padding-bottom: 5px;
